@@ -1,3 +1,8 @@
+Mon Feb 11 16:22:36 CET 2002 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/pattern.c: fixed bug #71181 p/text() would not
+	  work. A bit of cleanup.
+
 Mon Feb 11 15:01:42 CET 2002 Daniel Veillard <daniel@veillard.com>
 
 	* xslt-config: fixing Red Hat bug #59508
